# kokoro-speech-demo

./: .gitignore  README.md  compare.ipynb  demo.ipynb  pyproject.toml
