[tool.poetry]
package-mode = false

[project]
name = "kokoro-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["kokoro (>=0.8.4,<0.9.0)", "soundfile (>=0.13.1,<0.14.0)"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.31.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
